--- a/jsr/src/app/components/about/about.component.html
+++ b/jsr/src/app/components/about/about.component.html
@@ -35,3 +35,61 @@
         </div>
     </div>
 </section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <app-newcomp></app-newcomp>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+               <app-linechart></app-linechart>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- <section>
+<div class="container">
+    <div class="row">
+        <div class="col">
+          <app-financechart></app-financechart>
+        </div>
+    </div>
+</div>
+</section> -->
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <table>
+                    <tbody>
+                       
+                            <th>id</th>
+                            <th>title</th>
+                            <th>price</th>
+                            <th>Despcription</th>
+                            <th>category</th>
+                            <th>rating</th>
+                   
+                        <tr>
+                            <td>{{kdata.id}}</td>
+                            <td>{{kdata.title}}</td>
+                            <td>{{kdata.price}}</td>
+                            <td>{{kdata.Despcription}}</td>
+                            <td>{{kdata.carried}}</td>
+                            <td>{{kdata.rating}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+    </div>
+</section>
+
