--- a/jsr/src/app/components/header/header.component.html
+++ b/jsr/src/app/components/header/header.component.html
@@ -28,4 +28,14 @@
         </div> 
     </div>
 </section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p> Fill the google form</p>
+                <p>{{form}}</p>
+            </div>
+        </div>
+    </div>
+</section>
  
