--- a/jsr/src/app/components/home/home.component.html
+++ b/jsr/src/app/components/home/home.component.html
@@ -28,3 +28,21 @@
     </div>
 </section>
 <app-test></app-test>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                    <app-toast></app-toast>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <app-radar></app-radar>
+            </div>
+        </div>
+    </div>
+</section>
