--- a/jsr/src/app/components/horizontal/horizontal.component.html
+++ b/jsr/src/app/components/horizontal/horizontal.component.html
@@ -1,4 +1,8 @@
-
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                
 <p>
     <button type="button" class="btn btn-outline-primary" (click)="collapse.toggle()"
         [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample">
@@ -12,3 +16,7 @@
         </div>
     </div>
 </div>
+            </div>
+        </div>
+    </div>
+</section>
