--- a/jsr/src/app/components/testing/testing.component.html
+++ b/jsr/src/app/components/testing/testing.component.html
@@ -7,3 +7,68 @@
         </div>
     </div>
 </section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <app-tooltip></app-tooltip>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+               <app-offconvas></app-offconvas>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <app-pagination></app-pagination>
+
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <app-popover></app-popover>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <app-pbar></app-pbar>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <app-template></app-template>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+               
+                <app-scrollpsy></app-scrollpsy>
+            </div>
+        </div>
+    </div>
+</section>
